# PiControl

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY_GUIDELINES.md  docker-compose.yml  pi_control.db  pyproject.toml  requirements-lock.txt  requirements.txt  simulador.py
.github/workflows/: ci.yml  security-audit.yml
app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  rfid.py
app/routers/: __init__.py  checkins.py  empleados.py  employees.py  fichajes.py  rfid.py  web.py
app/static/: app.js  style.css
app/templates/: admin_logs.html  base.html  checkins.html  configuracion.html  configuration.html  empleado_historial.html  empleados.html  empleados_archivados.html  employee_history.html  employees.html  employees_archived.html  fichajes.html  kiosk.html  login.html  menu.html  reportes.html  reportes_result.html  reports.html  reports_result.html  rfid_assign.html  setup.html
install/: cleanup_picontrol.service  cleanup_picontrol.timer  install_from_github.sh  pi_installer.sh  picontrol-firstboot.service  picontrol-kiosk.service  picontrol-write-rfid.sudoers.template
scripts/: init_db.py
tests/: test_admin_flow.py  test_api.py
tools/: cleanup_old_records.py  picontrol-cleanup.sh  picontrol-firstboot-gui.sh  picontrol-firstboot.sh  picontrol-kiosk.sh  picontrol-reset-admin-gui.sh  picontrol-reset-admin.sh  picontrol-restart-gui.sh  picontrol-restart.sh  picontrol-rotate-secret-gui.sh  picontrol-rotate-secret.sh  picontrol-write-rfid  reset_admin.py  rotate_secret.py
